<resources>
    <string name="app_name">My Application</string>
    <string name="first_button">first</string>
    <string name="second_button">second</string>
    <string name="third_button">third</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bpiu">+</string>
    <string name="bmeno">-</string>
    <string name="bdiviso">/</string>
    <string name="bper">*</string>
    <string name="buguale">=</string>
    <string name="bzero">0</string>
    <string name="bfaccina">Cancella</string>
    <string name="fourth_button">culo</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>

</resources>
